# NeuralNetworkForArduino

./: CMakeLists.txt  main.cpp
include/: DenseLayer.h  Layer.h  MNISTData.h  NeuralNetwork.h
src/: DenseLayer.cpp  MNISTData.cpp  NeuralNetwork.cpp
